--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,16 @@ h2{
     color: var(--bt_primary);
     border: 2px solid var(--bt_primary_light);
     border-radius: 5px;
+    padding: 0.2rem 0.5rem;
+    font-weight: bold;
 }
 .bottone2{
     background-color: var(--bt_secondary_light);
     color: var(--bt_primary);
     border: 1px solid var(--bt_secondary);
     border-radius: 5px;
+    padding: 0.2rem 0.5rem;
+    font-weight: bold;
 }
 .bg_secondary{
     background-color: var(--bt_secondary);
